trying to fix partners carousel not showing up on mobile despite appearing on browser's responsive preview mode

--- a/_assets/stylesheets/_partners.sass
+++ b/_assets/stylesheets/_partners.sass
@@ -1,5 +1,5 @@
 
-#exclusive, #gold, #silver, #bronze
+#exclusive, #gold, #silver, #bronze, #partners
   background: url(image_path("backgrounds/light-touch.png")) no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
@@ -15,17 +15,6 @@
 
 #partners
   background: url(image_path("backgrounds/light-stuff.png")) no-repeat center center
-  -webkit-background-size: cover
-  -moz-background-size: cover
-  background-size: cover
-  -o-background-size: cover
-  background-attachment: scroll
-  color: #fff
-  padding-bottom: 20px
-  text-align: center
-  .section-title
-    text-align: center
-    border-color: #EAEAEA
 
 #partners-heading
   border: 5px solid
@@ -113,15 +102,12 @@
   width: 250px
   margin: 10px 10px 10px 10px
 
-.short-row
-  @media (min-width: 998px)
-    height: 100px
-
 .partners-carousel
-  margin-bottom: 50px
+  padding-bottom: 5vh
   .slick-track
     display: flex
     align-items: center
+    margin: 6vh 0
     .slick-arrow::before
       font-size: 25px
   .slick-dots
